--- a/package.json
+++ b/package.json
@@ -23,5 +23,17 @@
     "dotenv-webpack": "^8.1.0",
     "gh-pages": "^6.3.0",
     "web-vitals": "^4.2.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
